--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,27 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2926\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2926"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
     "    suma = 0\n",
-    "    for i in range(num+1):\n",
+    "    for i in range(num + 1):\n",
     "        suma = i + suma\n",
     "    return(suma)\n",
     "\n",
-    "print(summation(num))\n",
-    "\n"
+    "summation(num)\n"
    ]
   },
   {
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,15 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27\n"
-     ]
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -93,7 +98,7 @@
     "        suma = i + suma\n",
     "    return(suma)\n",
     "\n",
-    "print(summation2(*array))"
+    "summation2(*array)\n"
    ]
   },
   {
@@ -105,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +127,7 @@
     "\n",
     "    print(a+b+c)\n",
     "    \n",
-    "summation3(*array)"
+    "summation3(*array)\n"
    ]
   },
   {
@@ -134,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -154,9 +159,18 @@
       "blue 8\n",
       "green 24\n",
       "orange 12\n",
-      "purple 10\n",
-      "54\n"
+      "purple 10\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -170,7 +184,7 @@
     "            suma = numero + suma\n",
     "    return(suma)\n",
     "\n",
-    "print(summation4(**dictionary))\n",
+    "summation4(**dictionary)\n",
     "        \n",
     "        "
    ]
@@ -184,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,14 +211,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args,**kwargs):\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    \n",
+    "    suma = 0\n",
+    "    \n",
+    "    for valor in args:\n",
+    "        suma = valor + suma\n",
+    "    for letra, valor in kwargs.items():\n",
+    "        suma = valor + suma\n",
+    "    return(suma)\n",
+    "\n",
+    "valores = [a, b, c]\n",
+    "valores.extend(d)\n",
+    "claves = e\n",
+    "summation5(*valores, **claves)\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -323,9 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def divisible2(iterator):\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
@@ -335,7 +385,13 @@
     "    # Sample Input: iter([1,2,3])\n",
     "    # Sample Output: 2\n",
     "    \n",
-    "    # Your code here:\n",
+    "    for i in iterator:\n",
+    "        if i%2 == 0:\n",
+    "            return i\n",
+    "    return 0\n",
+    "    \n",
+    "iterator = iter([1,2,3])\n",
+    "divisible2(iterator)\n",
     "    "
    ]
   },
@@ -389,9 +445,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "def even_iterator(n):\n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
@@ -401,7 +467,14 @@
     "    # Sample Input: 5\n",
     "    # Sample Output: iter([0, 2, 4])\n",
     "    \n",
-    "    # Your code here:\n",
+    "    number = 0\n",
+    "    while number < n:\n",
+    "        yield number\n",
+    "        number = number + 2\n",
+    "        \n",
+    "iterator = even_iterator(5)\n",
+    "for i in iterator:\n",
+    "    print(i)\n",
     "    "
    ]
   },
