--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -342,18 +342,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "iterator = iter([1,2,3,7,8,7,5])\n",
+    "iterator = iter([1,3,5,7,5])\n",
     "\n",
-    "def divisible2(iterator=0):\n",
-    "    # NO SE PUEDE PORQUE NO ADMITE BREAK? return [i for i in iterator if i%2==0] \n",
-    "    for i in iterator:\n",
+    "print(next(iterator))\n",
+    "\n",
+    "def divisible2(e=0):\n",
+    "    for i in e:\n",
     "        if i%2==0:\n",
     "            return i\n",
     "            break\n",
+    "        else:\n",
+    "            return 0\n",
+    "            break\n",
+    "    \n",
     "divisible2(iterator)\n",
     "\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
@@ -424,13 +447,7 @@
    "outputs": [],
    "source": [
     "def even_iterator(n):\n",
-    "    number = 0\n",
-    "    while number < n:\n",
-    "            yield number\n",
-    "            number = number + 1\n",
-    "            \n",
-    "for i in even_iterator(5):\n",
-    "    print(i)\n",
+    "    \n",
     "    \n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
     "    # Input: integer\n",
