--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +198,22 @@
     }
    ],
    "source": [
-    "def summation5(*args, **kwargs):\n",
-    "    # This function returns the sum of a,b,c,d and e\n",
-    "    # You need to define the function input\n",
-    "    return sum(args) + sum(kwargs.values())\n",
+    "# This function returns the sum of a,b,c,d and e\n",
+    "# You need to define the function input\n",
     "\n",
-    "summation5(a,b,c,*d,**e)\n"
+    "#way1\n",
+    "#def summation5(*args, **kwargs):\n",
+    "    #return sum(args) + sum(kwargs.values())\n",
+    "#summation5(a,b,c,*d,**e)\n",
+    "\n",
+    "\n",
+    "#way2\n",
+    "def summation5(*args, **kwargs):\n",
+    "    return sum(args)\n",
+    "summation5(a,b,c,*d,*e.values())\n",
+    "\n",
+    "#way3 (no va)\n",
+    "#sum([a,b,c,*d,*e.values])\n"
    ]
   },
   {
