--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -447,6 +447,14 @@
    "outputs": [],
    "source": [
     "def even_iterator(n):\n",
+    "    number = 0\n",
+    "    while number < n:\n",
+    "        if number%2 == 0:\n",
+    "    \n",
+    "            \n",
+    "        \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    \n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
