--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,12 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "xxxxx"
+    "import re\n"
    ]
   },
   {
@@ -34,11 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
+    "' '.join(str_list)+\".\"\n",
     "# Your code here:\n"
    ]
   },
@@ -51,39 +62,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: [\"['bread'\", \"'broccoli']\"]\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
+    "x = []\n",
+    "s = ''\n",
+    "for e in food_list:\n",
+    "    if e.startswith (\"b\"):\n",
+    "        x.append (e)\n",
+    "    \n",
+    "y = str(x)\n",
+    "    \n",
+    "print (\"Grocery list:\", y.split(\", \"))\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
     "# Your code here:\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the cell below, write a function that computes the area of a circle using its radius. Compute the area of the circle and insert the radius and the area between the two strings. Make sure to include spaces between the variable and the strings. \n",
-    "\n",
-    "Note: You can use the techniques we have learned so far or use f-strings. F-strings allow us to embed code inside strings. You can read more about f-strings [here](https://www.python.org/dev/peps/pep-0498/)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius is: 78.53981633974483\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "string1 = \"The area of the circle with radius:\"\n",
     "string2  = \"is:\"\n",
+    "string3 = string1.replace(\":\",\" \")+string2\n",
+    "\n",
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
+    "    acircle = pi * x**2\n",
+    "    \n",
+    "    return (acircle)\n",
+    "\n",
+    "print (string3, area(5))\n",
+    "\n",
+    "\n",
     "    \n",
     "    # Sample input: 5.0\n",
     "    # Sample Output: 78.53981633\n",
@@ -120,8 +163,9 @@
     "To say that for destruction ice\n",
     "Is also great\n",
     "And would suffice.\"\"\"\n",
+    "# Your code here:\n",
     "\n",
-    "# Your code here:\n"
+    "\n"
    ]
   },
   {
