--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -261,14 +261,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'P']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "re.findall('[A-Z]',poem)\n",
+    "\n"
    ]
   },
   {
@@ -280,13 +294,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 1), match='1'>\n",
+      "<re.Match object; span=(3, 4), match='1'>\n",
+      "<re.Match object; span=(9, 10), match='1'>\n",
+      "<re.Match object; span=(4, 5), match='4'>\n",
+      "None\n",
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "a=[]\n",
+    "for i in data:\n",
+    "    print(re.search('[\\d+]', i))\n",
+    "    if re.search('[\\d+]', i):\n",
+    "        a.append(i)\n",
+    "    \n",
+    "        \n",
+    "print(a)"
    ]
   },
   {
@@ -302,13 +337,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 1), match='1'>\n",
+      "<re.Match object; span=(3, 4), match='1'>\n",
+      "<re.Match object; span=(9, 10), match='1'>\n",
+      "<re.Match object; span=(4, 5), match='4'>\n",
+      "None\n",
+      "['JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "a=[]\n",
+    "for i in data:\n",
+    "    print(re.search('[\\d+]', i))\n",
+    "    if re.search('[\\d+]', i) and re.search('[A-Z]', i):\n",
+    "        a.append(i)\n",
+    "    \n",
+    "        \n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
