--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -200,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['i', 'was', 'angry', 'with', 'my', 'friend;', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe:', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', '&', 'morning', 'with', 'my', 'tears:', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole;', 'morning', 'glad', 'i', 'see;', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
     "\n",
     "# Your code here:\n",
     "\n",
-    "d= poem.replace(\"\\n\",\" \").replace(\".\", \" \").replace(\",\", \" \").strip()\n",
+    "d= poem.replace(\"\\n\",\" \").replace(\".\", \" \").replace(\",\", \" \").replace(\"&\", \" \").replace(\":\", \" \").replace(\";\", \" \").strip()\n",
     "d= ' '.join([e for e in d.split(' ') if e != ''])\n",
     "blackwords=[]\n",
     "for i in d.split(' '):\n",
@@ -247,7 +247,7 @@
     "print(blackwords)\n",
     "\n",
     "\n",
-    "#Cuando acabae los labs, definir funcion Remove_blacklist, que ejecute este comando.\n"
+    "#Cuando acabe los labs, definir funcion Remove_blacklist, que ejecute este comando.\n"
    ]
   },
   {
