--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,9 @@
     "# Write your code here\n",
     "\n",
     "for i in docs:\n",
-    "    open(i,'r')\n"
+    "    f = open(i,'r')\n",
+    "    corpus.append(f.readline())\n",
+    "    \n"
    ]
   },
   {
@@ -109,17 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(corpus)"
    ]
@@ -151,7 +145,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "import re\n",
+    "new_corpus=[]\n",
+    "for e in corpus:\n",
+    "    new_corpus.append(e.lower().replace(\".\",\"\"))\n",
+    "\n",
+    "print(new_corpus)"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "\n",
+    "for i in "
    ]
   },
   {
