--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n",
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "str_list.append('.')\n",
+    "str=' '.join(str_list)\n",
+    "str=str[:-2]+str[-1]\n",
+    "print(str)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Otra forma\n",
+    "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
+    "str_list[len(str_list)-1]+='.'\n",
+    "print(' '.join(str_list))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -50,12 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "str2=\"\"\"Grocery list: \"\"\"\n",
+    "food=[f.lower() for f in food_list if f.lower().startswith('b')]      \n",
+    "food[len(food)-1]+='.'\n",
+    "str2+=', '.join(food)      \n",
+    "print(str2)\n"
    ]
   },
   {
@@ -69,9 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725124.\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -80,6 +123,7 @@
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    return round(pi*x*x,8)\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -90,7 +134,9 @@
     "    # Your code here:\n",
     "    \n",
     "    \n",
-    "# Your output string here:"
+    "# Your output string here:\n",
+    "str3 = string1 + \" {} \".format(radius) + string2 + \" {}.\".format(area(radius))\n",
+    "print(str3)"
    ]
   },
   {
@@ -106,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, '': 5, 'ice': 2, 'from': 1, 'what': 1, 'i': 4, 've': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'but': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 2, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'that': 1, 'for': 1, 'destruction': 1, 'is': 1, 'also': 1, 'great': 1, 'and': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +174,21 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "poem = re.sub('[%s]' % re.escape(string.punctuation), \" \", poem).replace(\"\\n\",\" \").replace('’',\" \").lower().split(\" \")\n",
+    "d={}\n",
+    "for p in poem :\n",
+    "    if d.get(p,0)==0:\n",
+    "        d[p]=1\n",
+    "    else:\n",
+    "        d[p]+=1\n",
+    "print(d)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -132,9 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fears', 'end', 'had', 'deceitful', 'into', 'grow', 'wrath', 'morning', 'bright', 'shine', 'stole', 'smiles', 'veild', 'he', 'i', 'outstretched', 'glad', 'see', 'was', 'beheld', 'pole', 'friend', 'mine', 'soft', 'apple', 'both', 'with', 'knew', 'garden', 'till', 'tree', 'grew', 'that', 'day', 'tears', 'told', 'when', 'did', 'waterd', 'my', 'wiles', 'angry', 'bore', 'beneath', 'foe', 'sunned', 'night', 'not'}\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -158,7 +234,13 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "import string\n",
+    "# Your code here:\n",
+    "x=re.sub('[%s]' % re.escape(string.punctuation), \" \", poem).replace(\"\\n\",\" \").lower().split(\" \")\n",
+    "blacklist.append('')\n",
+    "x=set(x).difference(set(blacklist))\n",
+    "\n",
+    "print(x)\n"
    ]
   },
   {
@@ -172,14 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "p=re.findall('[A-Z]',poem)\n",
+    "print(p)\n"
    ]
   },
   {
@@ -191,13 +283,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "res=[d for d in data if re.search('[\\d]',d)]\n",
+    "# Your code here:\n",
     "\n",
-    "# Your code here:\n"
+    "print(res)\n",
+    "        \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -213,13 +318,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "res=[d for d in data if re.search('[\\d|a-z]',d)]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
