a por el challenge 3

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -33,13 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido...'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
     "# Your code here:\n",
-    "#hola\n"
+    "#hola\n",
+    "\n",
+    "' '.join(str_list) +  '...'"
    ]
   },
   {
@@ -51,12 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocery list: bananas, bread, brownie mix, broccoli...'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\"Grocery list: \"+', '.join([e.lower() for e in food_list if e.startswith(\"b\") or e.startswith(\"B\")]) + \"...\"\n"
    ]
   },
   {
@@ -70,9 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -81,6 +114,8 @@
     "radius = 4.5\n",
     "\n",
     "def area(x, pi = math.pi):\n",
+    "    a = (x**2)*pi\n",
+    "    return(a)\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -89,8 +124,9 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    \n",
+    "     \n",
+    "  \n",
+    "print(string1, radius, string2, area(radius))\n",
     "# Your output string here:"
    ]
   },
@@ -107,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire,': 1, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'fire': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice,': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -121,7 +165,18 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "lst = poem.replace(\".\",\"\").replace(\"\\n\",\" \").split(' ')\n",
+    "frec=[]\n",
+    "for w in lst:\n",
+    "     frec.append(lst.count(w))\n",
+    "\n",
+    "c= dict(zip(lst, frec))\n",
+    "     \n",
+    "print(c)\n",
+    "        \n",
+    "        \n",
+    "\n"
    ]
   },
   {
@@ -133,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend;', 'i', 'told', 'my', 'wrath,', 'my', 'wrath', 'did', 'endi', 'was', 'angry', 'with', 'my', 'foe:', 'i', 'told', 'not,', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears,night', '&', 'morning', 'with', 'my', 'tears:', 'i', 'sunned', 'with', 'smiles,and', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine,and', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole,', 'when', 'night', 'had', 'veild', 'pole;', 'morning', 'glad', 'i', 'see;', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -159,7 +222,11 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "lst = poem.lower().replace(\".\",\"\").replace(\"\\n\",\"\").split(' ')\n",
+    "\n",
+    "cleaned_list = [ x for x in lst if x not in blacklist ]\n",
+    "print(cleaned_list)"
    ]
   },
   {
