--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -33,12 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Yourcode here:\n"
+    "# Yourcode here:\n",
+    "' '.join(str_list)+'.'"
    ]
   },
   {
@@ -50,12 +62,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery List: Bananas, Chocolate, bread, diapers, Ice Cream, Brownie Mix, broccoli.\n"
+     ]
+    }
+   ],
+   "source": [
+    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
+    "# Your code here:\n",
+    "\n",
+    "\n",
+    " \n",
+    "\n",
+    "text = str(', '.join(food_list)+'.')\n",
+    "text.lower()\n",
+    "\n",
+    "new = str(\"Grocery List: \")\n",
+    "\n",
+    "grocery = new + text\n",
+    "\n",
+    "for i in grocery:\n",
+    "     if i.startswith('b') == 1:\n",
+    "        grocery.strip(i)\n",
+    "\n",
+    "print(grocery)\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -238,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
